Add notification on navbar.

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -6,6 +6,7 @@
     <div class="navbar-inner">
       <div class="" style="margin-left: 20px;">
         <a href="#" class="brand">Departure</a>
+        <div class="navbar-text" style="width: 85%;text-align: center;">{{notification}}</div>
       </div>
     </div>
 
