--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,7 +6,7 @@
     top: 80px;
     right: 20px;
     bottom: 20px;
-    width: 280px;
+    width: 300px;
     overflow-y: scroll;
     -webkit-box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);
@@ -44,9 +44,21 @@
 
 .stop-departure-route-name {
     background-color: #00ccff;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 1px;
+    padding-bottom: 1px;
     color: white;
+}
+
+.stop-departure-route-direction-name {
+    background-color: #ffb122;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    color: white;
+    white-space: nowrap;
 }
 
 .stop-departure-route-warning {
