--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,91 +1,91 @@
-$icon-font-path: "/bower_components/sass-bootstrap/fonts/";
+$icon-font-path: "../bower_components/sass-bootstrap/fonts/";
 
-@import 'sass-bootstrap/lib/bootstrap';
+@import '../bower_components/sass-bootstrap/lib/bootstrap';
 
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+.navbar {
+  margin-bottom: 0;
 }
 
-/* Space out content a bit */
-body {
-    padding-top: 20px;
-    padding-bottom: 20px;
+#notificationText {
+  width: 85%;
+  text-align: center;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-    padding-left: 15px;
-    padding-right: 15px;
+#appBody {
+  position: fixed;
+  width: 100%;
+  height: 100%;
 }
 
-/* Custom page header */
-.header {
-    border-bottom: 1px solid #e5e5e5;
+#mapCanvas, #mapCanvasContainer {
+  position: fixed;
+  width: 100%;
+  height: 100%;
 }
 
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
+#infoBoard {
+  background-color: #f5f5f5;
+  position: fixed;
+  top: 80px;
+  right: 20px;
+  bottom: 20px;
+  width: 300px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  -webkit-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.5);
 }
 
-/* Custom page footer */
-.footer {
-    padding-top: 19px;
-    color: #777;
-    border-top: 1px solid #e5e5e5;
+#controlPanel {
+  position: fixed;
+  bottom: 20px;
+  right: 300px;
+  left: 20px;
+  height: 40px;
 }
 
-.container-narrow > hr {
-    margin: 30px 0;
+.stop-cell-internal {
+  padding: 16px;
+  border-bottom-color: #808080;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
 }
 
-/* Main marketing message and sign up button */
-.jumbotron {
-    text-align: center;
-    border-bottom: 1px solid #e5e5e5;
+.stop-cell:hover, .stop-cell.stop-cell-hightlighted {
+  background-color: #add8e6;
 }
 
-.jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
+.stop-name {
+  font-size: 16;
+  font-weight: bold;
+  margin-bottom: 4px;
 }
 
-/* Supporting marketing content */
-.marketing {
-    margin: 40px 0;
+.stop-departure-route {
+  padding-top: 12px;
 }
 
-.marketing p + h4 {
-    margin-top: 28px;
+.stop-departure-route-name {
+  background-color: #00ccff;
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  color: white;
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-    .container {
-        max-width: 730px;
-    }
-
-    /* Remove the padding we set earlier */
-    .header,
-    .marketing,
-    .footer {
-        padding-left: 0;
-        padding-right: 0;
-    }
-    /* Space out the masthead */
-    .header {
-        margin-bottom: 30px;
-    }
-    /* Remove the bottom border on the jumbotron for visual effect */
-    .jumbotron {
-        border-bottom: 0;
-    }
+.stop-departure-route-direction-name {
+  background-color: #ffb122;
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-top: 1px;
+  padding-bottom: 1px;
+  color: white;
+  white-space: nowrap;
 }
+
+.stop-departure-route-warning {
+  padding-top: 4px;
+}
+
